--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-node_modules
+build/
+node_modules/
+Debug/
+Release/
+*.lock
+*.log
+package-lock.json
+npm-debug.log*
 
 .idea/
-
-# misc
+.vscode/
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-
