--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "napi-addon-fdtd": "^6.0.0",
+    "napi-addon-fdtd": "2.1.0",
     "nodemon": "^2.0.12"
   }
 }
