--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "napi-addon-fdtd": "2.1.1"
+    "napi-addon-fdtd": "2.2.3",
+    "ws": "^8.2.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
