--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-build/
-node_modules/
-Debug/
-Release/
-*.lock
-*.log
-package-lock.json
-npm-debug.log*
-
-.idea/
-.vscode/
-.DS_Store
+node_modules
+npm-debug.log
