--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "server-ts",
+  "name": "websockets-vanilla",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/server.ts",
-  "scripts": {
-    "start": "node ./dist/server.js",
-    "dev": "nodemon -e ts -w ./src -x npm run watch:serve",
-    "watch:serve": "ts-node src/server.ts"
+  "engines": {
+    "node": "12.x"
   },
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
+    "bufferutil": "^4.0.1",
     "express": "^4.17.1",
-    "ws": "^8.2.3"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.9.6",
-    "nodemon": "^2.0.12",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "utf-8-validate": "^5.0.2",
+    "ws": "^7.2.0"
   }
 }
