--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "NODE_ENV=production node --optimize_for_size --max_old_space_size=512 ./dist/src/server.js",
+    "dev:inspect": "NODE_ENV=production node --inspect ./dist/src/server.js",
     "dev": "NODE_ENV=development nodemon -e ts -w ./src -x npm run watch:serve",
     "watch:serve": "ts-node src/server.ts"
   },
@@ -15,7 +16,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "napi-addon-fdtd": "^3.1.15",
+    "napi-addon-fdtd": "^3.1.22",
     "ws": "6.0.0"
   },
   "devDependencies": {
